--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(201, 201, 250);
+    background-color: #2c3e50;
 }
 
 h1 {
@@ -8,23 +8,29 @@ h1 {
     text-align: center;
     animation: text-reveal 0.5s ease-in forwards;
 }
-h2{
+
+h2 {
     color: rgb(201, 201, 250);
     animation: text-reveal2 0.5s ease-in forwards;
 }
 
-#result-message{
+#result-message {
     animation: text-reveal2 0.5s ease-in forwards;
 }
 
-@keyframes text-reveal{
-    100%{
-        color: blue;
+.tekst_pogadanja {
+    color: rgb(40, 218, 173);
+}
+
+@keyframes text-reveal {
+    100% {
+        color: rgb(40, 218, 173);
     }
 }
-@keyframes text-reveal2{
-    100%{
-        color: rgb(47, 47, 95);
+
+@keyframes text-reveal2 {
+    100% {
+        color: rgb(40, 218, 173);
     }
 }
 
@@ -47,15 +53,15 @@ button {
     border-radius: 3px;
     background-color: darkblue;
     display: inline-block;
-      color: black;
-      background-color: transparent;
-      border: 2px solid darkblue;
-      font-size: 16px;
-      text-transform: uppercase;
-      letter-spacing: .1rem;
-      margin-top: 20px;
-      transition: .3s ease background-color;
-      transition-property: background-color,color;
+    color: black;
+    background-color: transparent;
+    border: 2px solid darkblue;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    margin-top: 20px;
+    transition: .3s ease background-color;
+    transition-property: background-color, color;
 }
 
 button:hover {
