--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@ body {
     font-family: Arial, sans-serif;
     background-color: #2c3e50;
 }
-
+#return {
+    position: absolute;
+    left: 1%;
+    top: 2%;
+  }
+  
 h1 {
     color: rgb(201, 201, 250);
     text-align: center;
@@ -66,6 +71,10 @@ input[type="text"] {
     background-color: #5b6d80;
     color: rgb(255, 255, 255);;
 }
+#hint6{
+    background-color: #5b6d80;
+    color: rgb(255, 255, 255);;
+}
 li {
     height: 3.7em;
     text-align: center;
@@ -102,13 +111,13 @@ p#result-message {
 #file{
     
         display: flex;
-        flex-direction: column; /* Stack items vertically */
-        align-items: center; /* Horizontally align items */
+        flex-direction: column;
+        align-items: center; 
       
       
 }
 .form-group{
     display: flex;
-    flex-direction: column; /* Stack items vertically */
-    align-items: center; /* Horizontally align items */
+    flex-direction: column;
+    align-items: center;
 }
