--- a/styleZaMain.css
+++ b/styleZaMain.css
@@ -1,7 +1,4 @@
-html{
-  scroll-behavior: smooth;
-  background-color: rgb(201, 201, 250);
-}
+
 
 
 #navbar {
@@ -39,9 +36,9 @@ html{
   #Home{
     padding-top: 3em;
     padding-bottom: 10em;
-    display: flex;          /* Enable flexbox layout */
-    align-items: center;    /* Center the element vertically */
-    width: 50%;            /* Set the width of the element */
+    display: flex;          
+    align-items: center;    
+    width: 50%;            
     margin: auto; 
   }
   #Game1{
@@ -49,9 +46,9 @@ html{
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  display: flex;          /* Enable flexbox layout */
-  align-items: center;    /* Center the element vertically */
-  width: 50%;            /* Set the width of the element */
+  display: flex;          
+  align-items: center;    
+  width: 50%;            
   margin: auto; 
   }
 
@@ -60,9 +57,9 @@ html{
  align-items: center;
  flex-direction: column;
  justify-content: center;
- display: flex;          /* Enable flexbox layout */
- align-items: center;    /* Center the element vertically */
- width: 50%;            /* Set the width of the element */
+ display: flex;          
+ align-items: center;   
+ width: 50%;           
  margin: auto; 
  }
 
